--- a/index.css
+++ b/index.css
@@ -1,7 +1,9 @@
 @import url("/styles/common/variables.css");
+@import url("/styles/common/fonts.css");
 @import url("/styles/common/normalize.css");
 
 @import url("/styles/layout/structure.css");
-@import url("/styles/layout/banner.css");
+@import url("/styles/layout/header.css");
+@import url("/styles/layout/footer.css");
 
 @import url("/styles/pages/home.css");
