--- a/styles/common/normalize.css
+++ b/styles/common/normalize.css
@@ -9,10 +9,22 @@
 
 a {
     text-decoration: none;
+    outline: none;
 }
 
-a:focus {
-    outline: none;
+h1, h2, h3 {
+    text-align: center;
+    font-family: var(--font-family-title);
+}
+
+h1, h2 {
+    font-size: 2.5rem;
+    color: var(--color-font-title-secondary);
+}
+
+h3 {
+    font-size: 2rem;
+    color: var(--color-font-title-primary);
 }
 
 button {
@@ -20,4 +32,29 @@ button {
     border: none;
     background-color: transparent;
     cursor: pointer;
+    outline: none;
 }
+
+/* TOOLBAR CUSTOM */
+
+/* ::-webkit-scrollbar {
+    width: 15px;
+}
+  
+::-webkit-scrollbar-track {
+    background-color: var(--color-bg-light-primary);
+    border: 2px solid var(--color-bg-dark-primary);
+}
+  
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-bg-dark-secondary);
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-bg-dark-primary);
+}
+
+::-webkit-scrollbar-button {
+    height: 0.6rem;
+    background-color: var(--color-bg-dark-primary);
+}  */
