--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -30,10 +30,10 @@
         font-size: 2rem;
         font-family: var(--font-family-title);
         color: var(--color-font-bandeau-title-primary);
-        transition: color var(--transition-bandeau);
+        transition: color var(--transition-primary);
 
         span {
-            transition: color var(--transition-bandeau);
+            transition: color var(--transition-primary);
             color: var(--color-font-bandeau-title-secondary);
         }      
     }
@@ -70,7 +70,7 @@
             font-weight: 500;
             color: var(--color-font-menu-primary);
             text-wrap: nowrap;
-            transition: color var(--transition-bandeau), transform var(--transition-bandeau);
+            transition: color var(--transition-primary), transform var(--transition-primary);
         }
 
         .menu-section {
@@ -101,7 +101,7 @@
             background-color: var(--color-bg-dark-primary);
             color: var(--color-font-light);
             font-size: 0.9rem;
-            transition: background-color var(--transition-bandeau);
+            transition: background-color var(--transition-primary);
 
             &:hover {
                 background-color: var(--color-hover-primary);
@@ -156,7 +156,7 @@
         text-wrap: nowrap;
         font-size: 1.1rem;
         color: var(--color-font-light);
-        transition: color var(--transition-bandeau);
+        transition: color var(--transition-primary);
 
         &:hover {
             color: var(--color-hover-secondary);
