--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -17,14 +17,14 @@
         display: flex;
         align-items: center;
         padding: 0 1.5rem;
-        backdrop-filter: blur(0.25rem);
-        transition: backdrop-filter var(--transition-carrousel);
+        backdrop-filter: brightness(100%) blur(0.25rem);
+        transition: backdrop-filter var(--transition-primary);
 
         span {
             font-family: "Poppins-thin", Verdana, sans-serif;
             font-size: 6rem;
             color: var(--color-font-light);
-            transition: color var(--transition-carrousel);            
+            transition: color var(--transition-primary);            
         }
         
         &:hover {
@@ -81,7 +81,7 @@
                 width: 4rem;
                 height: 0.3rem;
                 background-color: var(--color-hover-arrows);
-                transition: background-color var(--transition-carrousel);
+                transition: background-color var(--transition-primary);
 
                 &:hover {
                     background-color: var(--color-hover-secondary);
@@ -117,30 +117,29 @@
         
         .city-img {
             position: relative;
-            /* border: solid 8px var(--color-bg-light-decondary); */
             box-shadow: 0 0 10px 5px var(--color-shadow-secondary);
-            /* border-radius: 50%; */
+            border-radius: 50%;
 
             img{
                 display: block;
                 width: 100%;
                 height: auto;
-                /* border-radius: 50%; */
+                border-radius: 50%;
             }                
 
             .city-overlay {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 0;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-color: var(--color-bg-dark-secondary);
-                overflow: hidden;
-                opacity: 80%;
-                transition: .5s ease;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                opacity: 0;
+                background-image: none;
+                transition: all var(--transition-primary);
 
                 .city-connect {
                     padding: 0.4rem 0.8rem;
@@ -148,8 +147,8 @@
                     background-color: var(--color-bg-button);
                     color: var(--color-font-light);
                     font-size: 0.9rem;
-                    transition: background-color var(--transition-bandeau);
-        
+                    transition: background-color var(--transition-primary);
+
                     &:hover {
                         background-color: var(--color-hover-primary);
                         color: var(--color-font-light);
@@ -159,7 +158,9 @@
 
             &:hover {
                 .city-overlay {
-                    height: 100%;
+                    opacity: 1;
+                    background-image: linear-gradient(to bottom, #1f3349da, #1f3349da);
+                    backdrop-filter: grayscale(100%);
                 }
             }
         }
@@ -167,13 +168,10 @@
         h3 {
             margin-top: 2rem;
         }
-
     }
 }
 
-
-
-.spaces {
+.places {
     padding: 5rem 0;
     background-image: url(/assets/img/home/espace.jpg);
     /* background-image: linear-gradient(to bottom, #232e3bef, #232e3bef), url(/assets/img/home/espace.jpg); */
@@ -185,37 +183,117 @@
        color: var(--color-font-light);
     }
 
-    .spaces-top {
+    .places-top {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: 1fr;
-        gap: 5rem;
+        gap: 3rem;
         margin-top: 5rem;
 
-        >div {
-            position: relative;
+        .place {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            background-color: var(--color-bg-dark-secondary);
+            box-shadow: 0 0 10px 10px #181c22;
 
-            .space {
-                height: 300px;
-                background-color: var(--color-bg-dark-primary);
-            }
+            .place-header {
+                display: flex;
+                justify-content: space-between;
+                padding: 0.5rem 1rem;
+                font-size: 1.4rem;
+                color: var(--color-font-light);
 
-            .space-overlay {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 0;
-                overflow: hidden;
-                transition: .5s ease;
-                background-color: var(--color-bg-dark-secondary);
-            }
+                .place-name {
+                    color: var(--color-font-title-tertiary);
+                }
 
-            &:hover {
-                .space-overlay {
-                    height: 100%;
+                .place-city {
+                    color: var(--color-font-medium);
                 }
             }
+
+            .place-containt {
+                position: relative;
+                flex-grow: 1;
+                display: flex;
+                flex-direction: column;
+                border-top: solid 1px transparent;
+
+                img {
+                    display: block;
+                    width: 100%;
+                    height: 15rem;
+                    object-fit: cover;
+                }
+                
+                .place-comment {
+                    flex-grow: 1;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding: 1rem;
+                    font-family: var(--font-family-title);
+                    font-size: 1.2rem;
+                    font-style: italic;
+                    color: var(--color-font-light);
+
+                    span:first-child, span:last-child {
+                        font-size: 2rem;
+                    }
+
+                    span:last-child {
+                        text-align: right;
+                    }
+
+                    .place-comment-text {
+                        text-align: center;
+                    }
+
+                }         
+
+                .place-overlay {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 0;
+                    overflow: hidden;
+                    transition: all var(--transition-primary);
+                    background-color: var(--color-bg-dark-secondary);
+
+                    .place-connect {
+                        padding: 0.4rem 0.8rem;
+                        border-radius: 5px;
+                        background-color: var(--color-bg-button);
+                        color: var(--color-font-light);
+                        font-size: 0.9rem;
+                        transition: background-color var(--transition-primary);
+            
+                        &:hover {
+                            background-color: var(--color-hover-primary);
+                            color: var(--color-font-light);
+                        }
+                    }
+                } 
+            }
+                   
+            &:hover {
+                .place-containt {
+                    border-top: solid 1px var(--color-shadow-secondary);
+                }
+                .place-overlay {
+                    height: 100%;
+                }
+            }            
         }
+
+
+
+
+        
     }
 }
