--- a/assets/css/common/layout.css
+++ b/assets/css/common/layout.css
@@ -11,6 +11,8 @@ body {
 }
 
 header {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     position: sticky;
     top: 0;
     z-index: 99;
@@ -30,21 +32,18 @@ footer {
 /* BANDEAU HEADER
 /*************************************************/
 
-header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
 .bandeau_left {
     background-color: var(--color-bg-bandeau-primary);
 }
 
-.bandeau {
+.bandeau_center {
     display: flex;
     justify-content: space-between;
 }
 
-.logo {
+/* BANDEAU : LOGO & TITRE */
+
+.bandeau_logo {
     display: flex;
     align-items: center;
 
@@ -54,12 +53,12 @@ header {
         background-color: var(--color-bg-bandeau-primary);
     }    
 
-    .logo-separator {
+    .bandeau_logo-separator {
         border-left: 2rem solid var(--color-bg-bandeau-primary);
         border-bottom:  6rem solid transparent;
     }
 
-    .logo-title {
+    .bandeau_logo-title {
         font-size: 2rem;
         font-family: var(--font-family-title);
         color: var(--color-font-bandeau-title-primary);
@@ -71,7 +70,7 @@ header {
         }      
     }
 
-    img:hover, .logo-separator:hover, .logo-title:hover {
+    img:hover, .bandeau_logo-separator:hover, .bandeau_logo-title:hover {
         &, ~.logo-title {
             color: var(--color-hover-primary);
 
@@ -82,13 +81,15 @@ header {
     }
 
     &:focus-visible {
-        .logo-title {
+        .bandeau_logo-title {
             outline: 2px solid var(--color-hover-primary);
         }
     }
 } 
 
-.menu {
+/* BANDEAU : MENU */
+
+.bandeau_menu {
     display: flex;
     gap: 2.5rem;
     height: 100%;
@@ -98,7 +99,7 @@ header {
         display: flex;
         align-items: center;
 
-        .link, .menu-section, .menu-section::after {
+        .bandeau_menu-link, .bandeau_menu-libelle, .bandeau_menu-libelle::after {
             font-size: 1.2rem;
             font-weight: 500;
             color: var(--color-font-menu-primary);
@@ -106,7 +107,7 @@ header {
             transition: color var(--transition-primary), transform var(--transition-primary);
         }
 
-        .menu-section {
+        .bandeau_menu-libelle {
             display: flex;
             align-items: center;
             cursor: default;
@@ -121,22 +122,22 @@ header {
             }
         }
 
-        .link:hover {
+        .bandeau_menu-link:hover {
             color: var(--color-hover-primary);
         }
 
-        .link:focus-visible {
+        .libandeau_menu-linknk:focus-visible {
             outline: 2px solid var(--color-hover-primary);
         }
     }
 
-    >li:has(.menu-section) {
+    >li:has(.bandeau_menu-libelle) {
         &:hover, &:has(a:focus) {
-            .menu-section {
+            .bandeau_menu-libelle {
                 color: var(--color-hover-primary);
             }
 
-            .menu-section::after {
+            .bandeau_menu-libelle::after {
                 transform: rotate(90deg);
                 border-left-color: var(--color-hover-primary);
             }
@@ -144,7 +145,9 @@ header {
     }
 }
 
-.globalmenu {
+/* BANDEAU : MENU DÉROULANT */
+
+.bandeau_menu-dropdown {
     position: absolute;
     top: 100%;
     left: 0;
@@ -169,7 +172,9 @@ header {
     }
 }
 
-.submenu {
+/* BANDEAU : SOUS-MENU */
+
+.bandeau_submenu {
     list-style-type: none;
     padding: 1rem 0;
     line-height: 2rem;
@@ -188,29 +193,19 @@ header {
             outline: 2px solid var(--color-hover-secondary);
         }
     }
-
-    /* .link-all {
-        padding: 0.25rem 0.5rem;
-        border: solid 1px var(--color-font-submenu-title);
-        border-radius: 5px;
-        
-        &:hover {
-            border-color: var(--color-hover-secondary);
-        }
-    }     */
 }
 
 /* ANIMATION DU MENU DÉROULANT */
 
-.menu {
+.bandeau_menu {
     >li:hover, >li:has(a:focus) {
-        .globalmenu {
+        .bandeau_menu-dropdown {
             height: calc-size(auto, size);
             padding: 1rem 0;
         }
     }
 
-    .globalmenu {
+    .bandeau_menu-dropdown {
         transition: 0.4s ease-in-out;
         height: 0;
         overflow: hidden;
@@ -221,7 +216,7 @@ header {
 /* BANDEAU FOOTER
 /*************************************************/
 
-.footer-banner {
+.footer_banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
