--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -12,92 +12,100 @@
     background-position: center;
     background-size: cover;
     transition: all 0.8s ease-out;
+}
 
-    .carousel_btn {
-        display: flex;
-        align-items: center;
-        padding: 0 1.5rem;
-        backdrop-filter: brightness(100%) blur(0.25rem);
-        transition: backdrop-filter var(--transition-primary);
+/* CARROUSEL : BOUTONS DE NAVIGATION GAUCHE & DROIT */
+
+.carousel_btn {
+    display: flex;
+    align-items: center;
+    padding: 0 1.5rem;
+    backdrop-filter: brightness(100%) blur(0.25rem);
+    transition: backdrop-filter var(--transition-primary);
+
+    span {
+        font-family: "Poppins-thin", Verdana, sans-serif;
+        font-size: 6rem;
+        color: var(--color-font-light);
+        transition: color var(--transition-primary);            
+    }
+    
+    &:hover {
+        backdrop-filter: brightness(80%) blur(0);
 
         span {
-            font-family: "Poppins-thin", Verdana, sans-serif;
-            font-size: 6rem;
-            color: var(--color-font-light);
-            transition: color var(--transition-primary);            
+            color: var(--color-hover-secondary);
         }
-        
-        &:hover {
-            backdrop-filter: brightness(80%) blur(0);
+    }
 
-            span {
-                color: var(--color-hover-secondary);
+    &:focus-visible {
+        span {
+            outline: 2px solid var(--color-hover-primary);
+        }
+    }
+}
+
+/* CARROUSEL : TITRES & BOUTONS DE NAVIGATION BAS */
+
+.carousel_center {
+    display: flex;
+    flex-direction: column;
+}
+
+.carousel_infos {
+    flex-grow: 1;
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+
+    >div {
+        margin-bottom: 2rem;
+        padding: 1rem 4rem;
+        backdrop-filter: blur(0.25rem);
+        border-radius: 10px;
+        color: var(--color-font-light);
+        text-align: center;
+
+        .carousel_infos-title {
+            font-family: var(--font-family-title);
+            font-size: 2.6rem;
             }
+
+        .carousel_infos-subtitle {
+            font-size: 2rem;
+        }
+    }            
+}
+
+.carousel_nav {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+
+    .carousel_nav-slideLink {
+        width: 4rem;
+        height: 0.3rem;
+        background-color: var(--color-hover-arrows);
+        transition: background-color var(--transition-primary);
+
+        &:hover {
+            background-color: var(--color-hover-secondary);
         }
 
         &:focus-visible {
-            span {
-                outline: 2px solid var(--color-hover-primary);
-            }
+            background-color: var(--color-hover-secondary);
         }
     }
 
-    .carousel_center {
-        display: flex;
-        flex-direction: column;
-
-        .carousel_infos {
-            flex-grow: 1;
-            display: flex;
-            align-items: flex-end;
-            width: 100%;
-
-            >div {
-                margin-bottom: 2rem;
-                padding: 1rem 4rem;
-                backdrop-filter: blur(0.25rem);
-                border-radius: 10px;
-                color: var(--color-font-light);
-                text-align: center;
-
-                .carousel_infos-title {
-                    font-family: var(--font-family-title);
-                    font-size: 2.6rem;
-                 }
-
-                .carousel_infos-subtitle {
-                    font-size: 2rem;
-                }
-            }            
-        }
-
-        .carousel_nav {
-            display: flex;
-            justify-content: center;
-            gap: 0.5rem;
-            margin-bottom: 1rem;
-
-            .slideLink {
-                width: 4rem;
-                height: 0.3rem;
-                background-color: var(--color-hover-arrows);
-                transition: background-color var(--transition-primary);
-
-                &:hover {
-                    background-color: var(--color-hover-secondary);
-                }
-
-                &:focus-visible {
-                    background-color: var(--color-hover-secondary);
-                }
-            }
-
-            .active {
-                background-color: var(--color-font-light);
-            }
-        }        
+    .carousel_nav-active {
+        background-color: var(--color-font-light);
     }
-}
+}        
+    
+/*************************************************/
+/* PRÉSENTATION
+/*************************************************/
 
 .presentation {
     padding: 5rem 0;
@@ -108,48 +116,12 @@
         font-size: 1.5rem;
     }
 
-    .presentation-cities {
+    .presentation_cities {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: 1fr;
         gap: 5rem;
         margin-top: 5rem;
-        
-        .city-img {
-            position: relative;
-            box-shadow: 0 0 10px 5px var(--color-shadow-secondary);
-            border-radius: 50%;
-
-            img{
-                display: block;
-                width: 100%;
-                height: auto;
-                border-radius: 50%;
-            }                
-
-            .city-overlay {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border-radius: 50%;
-                opacity: 0;
-                background-image: none;
-                transition: all var(--transition-primary);
-            }
-
-            &:hover {
-                .city-overlay {
-                    opacity: 1;
-                    background-image: linear-gradient(to bottom, #1f3349da, #1f3349da);
-                    backdrop-filter: grayscale(100%);
-                }
-            }
-        }
 
         h3 {
             margin-top: 2rem;
@@ -157,10 +129,38 @@
     }
 }
 
-.places {
+/* LIENS */
+
+.presentation_city {
+    display: block;
+    background-color: var(--color-bg-bandeau-primary);
+    box-shadow: 0 0 10px 5px var(--color-shadow-secondary);
+    border-radius: 50%;
+    overflow: hidden;
+
+    img{
+        display: block;
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+        transition: all var(--transition-primary);
+    }   
+    
+    &:hover {
+        img {
+            opacity: 0.5;
+            transform: scale(1.1);
+        }
+    }    
+}
+
+/*************************************************/
+/* SÉLECTION DES ÉCOWORKERS
+/*************************************************/
+
+.selection {
     padding: 5rem 0;
     background-image: url(/assets/img/index/espace.jpg);
-    /* background-image: linear-gradient(to bottom, #232e3bef, #232e3bef), url(/assets/img/home/espace.jpg); */
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -169,99 +169,129 @@
        color: var(--color-font-light);
     }
 
-    .places-top {
+    .selection_grid {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-auto-rows: 1fr;
         gap: 3rem;
         margin-top: 5rem;
 
-        .place {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            background-color: var(--color-bg-dark-secondary);
-            box-shadow: 0 0 10px 6px #0a0b0e;
 
-            .place-header {
-                display: flex;
-                justify-content: space-between;
-                padding: 0.5rem 1rem;
-                font-size: 1.4rem;
-                color: var(--color-font-light);
-
-                .place-name {
-                    color: var(--color-font-title-tertiary);
-                }
-
-                .place-city {
-                    color: var(--color-font-medium);
-                }
-            }
-
-            .place-containt {
-                position: relative;
-                flex-grow: 1;
-                display: flex;
-                flex-direction: column;
-                border-top: solid 1px transparent;
-
-                img {
-                    display: block;
-                    width: 100%;
-                    height: 15rem;
-                    object-fit: cover;
-                }
-                
-                .place-comment {
-                    flex-grow: 1;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    padding: 1rem;
-                    font-family: var(--font-family-title);
-                    font-size: 1.2rem;
-                    font-style: italic;
-                    color: var(--color-font-light);
-
-                    span:first-child, span:last-child {
-                        font-size: 2rem;
-                    }
-
-                    span:last-child {
-                        text-align: right;
-                    }
-
-                    .place-comment-text {
-                        text-align: center;
-                    }
-
-                }         
-
-                .place-overlay {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    width: 100%;
-                    height: 0;
-                    overflow: hidden;
-                    transition: all var(--transition-primary);
-                    background-color: var(--color-bg-dark-secondary);
-                } 
-            }
-                   
-            &:hover {
-                .place-containt {
-                    border-top: solid 1px var(--color-shadow-secondary);
-                }
-
-                .place-overlay {
-                    height: 100%;
-                }
-            }            
-        }
     }
 }
+
+/* FICHE ECOWORKING */
+
+.selection_place {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color-bg-dark-secondary);
+    box-shadow: 0 0 10px 6px #0a0b0e;
+
+    &:hover {
+        .selection_place-containt {
+            border-top: solid 1px var(--color-bg-separator);
+        }
+
+        .selection_place-overlay {
+            height: 100%;
+        }
+    }  
+}
+
+/* FICHE ECOWORKING : EN-TÊTE */
+
+.selection_place-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    font-size: 1.4rem;
+    color: var(--color-font-light);
+
+    .selection_place-name {
+        font-size: 1.7rem;
+        color: var(--color-font-title-tertiary);
+    }
+
+    .selection_place-city {
+        color: var(--color-font-medium);
+    }
+}
+
+/* FICHE ECOWORKING : CORPS */
+
+.selection_place-containt {
+    position: relative;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    border-top: solid 1px transparent;
+
+    img {
+        display: block;
+        width: 100%;
+        height: 15rem;
+        object-fit: cover;
+    }
+    
+    .selection_place-note {
+        display: flex;
+        justify-content: center;
+        padding: 1rem;
+        border-bottom: solid 1px var(--color-bg-separator);
+
+        div {
+            width: 1.5rem;
+            height: 1.5rem;
+            margin: 0 0.4rem;
+            border: solid 1px var(--color-font-light);
+            border-radius: 50%;
+        }
+
+        .note-active {
+            background-color: var(--color-bg-note);
+        }
+    }
+    
+    .selection_place-comment {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 1rem;
+        font-family: var(--font-family-title);
+        font-size: 1.2rem;
+        font-style: italic;
+        color: var(--color-font-light);
+
+        span:first-child, span:last-child {
+            font-size: 2rem;
+        }
+
+        span:last-child {
+            text-align: right;
+        }
+
+        .selection_place-comment-text {
+            text-align: center;
+        }
+
+    }         
+
+    .selection_place-overlay {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        transition: all var(--transition-primary);
+        background-color: var(--color-bg-dark-secondary);
+    } 
+}
+           
+          
