--- a/assets/css/common/fonts.css
+++ b/assets/css/common/fonts.css
@@ -22,3 +22,20 @@
     font-family: "Poppins-Medium";
     src: url(/assets/fonts/Poppins/Poppins-Medium.ttf);
 }
+
+@font-face {
+    font-family: "Roboto-Thin";
+    src: url(/assets/fonts/Roboto/Roboto-Thin.ttf);
+}
+@font-face {
+    font-family: "Roboto-Light";
+    src: url(/assets/fonts/Roboto/Roboto-Light.ttf);
+}
+@font-face {
+    font-family: "Roboto-Regular";
+    src: url(/assets/fonts/Roboto/Roboto-Regular.ttf);
+}
+@font-face {
+    font-family: "Roboto-Medium";
+    src: url(/assets/fonts/Roboto/Roboto-Medium.ttf);
+}
