--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -245,12 +245,18 @@
             width: 1.5rem;
             height: 1.5rem;
             margin: 0 0.4rem;
-            border: solid 1px var(--color-font-light);
+            border: solid 1px var(--color-bg-separator);
             border-radius: 50%;
         }
 
         .note-active {
+            border: solid 1px var(--color-font-light);
             background-color: var(--color-bg-note);
+        }
+
+        .note-empty {
+            border: solid 1px var(--color-font-light);
+            background-color: var(--color-bg-separator);
         }
     }
     
