--- a/assets/css/common/layout.css
+++ b/assets/css/common/layout.css
@@ -131,13 +131,9 @@ footer {
         }
 
         .menu-back {
-            /* padding: 0 1rem;
-            border: solid 1px var(--color-font-menu-primary);
-            border-radius: 6px; */
-
-            span {
-                font-family: "Poppins-Medium", Verdana, sans-serif;
-            }
+            margin-right: 0.5rem;
+            font-family: "Poppins-Medium", Verdana, sans-serif;
+            font-size: 0.7rem;
         }
     }
 
