--- a/assets/css/common/variables.css
+++ b/assets/css/common/variables.css
@@ -31,6 +31,8 @@
     --color-hover-primary: #b68d41;
     --color-hover-secondary: #f0ba57;
     --color-hover-arrows: #a0a0a0;
+    --color-input-border: #929fb1;
+    --color-input-shadow: #929fb1;
 
     /* BANDEAU & MENU */
     --color-bg-bandeau-primary: var(--color-bg-dark-secondary);
