--- a/assets/css/pages/account.css
+++ b/assets/css/pages/account.css
@@ -1,5 +1,5 @@
 /*************************************************/
-/* PRÉSENTATION
+/* CONNEXION
 /*************************************************/
 
 .connect {
@@ -16,17 +16,70 @@
         grid-template-columns: 1fr 1fr;
         grid-auto-rows: 1fr;
         gap: 1rem;
+        margin-top: 3rem;
 
         >div {
-            /* border: solid 1px var(--color-bg-separator); */
+            padding: 3rem 6rem 4rem;
             box-shadow: 5px 5px 10px 0 var(--color-shadow-secondary);
-        }
-
-        h3 {
-            margin-top: 2rem;
+            border-radius: 10px;
+            background-color: var(--color-bg-light-decondary);
         }
     }
 }
+
+/* FORMULAIRE */
+
+.connect_form {
+    margin-top: 2rem;
+    
+    >div {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;        
+    }
+
+     label {
+        margin-bottom: 0.25rem;
+    }
+        
+    input[type="email"], input[type="password"] {
+        height: 2rem;
+        border: solid 1px var(--color-bg-dark-primary);
+        border-radius: 5px;
+        padding: 0 0.5rem;
+
+        &:focus {
+            outline: none;
+            border-color: var(--color-input-border);
+            box-shadow: 0 0 10px 0px var(--color-input-shadow);
+        }        
+    }
+
+    a {
+        display: block;
+        font-size: 0.9rem;
+    }
+
+    input[type="submit"] {
+        margin: 2rem auto 0;
+        width: 50%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* LIENS */
 
