--- a/assets/css/params/variables.css
+++ b/assets/css/params/variables.css
@@ -6,7 +6,7 @@
 
 :root {
     /* BACKGROUND COLOR */
-    --color-bg-light-primary: #fdfdfd;
+    --color-bg-light-primary: #ffffff;
     --color-bg-light-secondary: #e4e6ee;
     --color-bg-dark-primary: #4a5868;
     --color-bg-dark-secondary: #3e4b5a;
