--- a/assets/css/params/variables.css
+++ b/assets/css/params/variables.css
@@ -31,7 +31,7 @@
     --color-hover-primary: #b68d41;
     --color-hover-secondary: #f0ba57;
     --color-hover-arrows: #a0a0a0;
-    --color-input-border: #929fb1;
+    --color-input-border: #b7c1cf;
     --color-input-shadow: #929fb1;
 
     /* BANDEAU & MENU */
