--- a/assets/css/params/variables.css
+++ b/assets/css/params/variables.css
@@ -24,22 +24,25 @@
     --color-font-medium: #bdc8d4;
     --color-font-dark: #38414d;
     --color-font-title-primary: #56606b;
-    --color-font-title-secondary: #4e8f60;
+    --color-font-title-secondary: #7e8c9b;
+    /* --color-font-title-secondary: #4e8f60; */
     --color-font-title-tertiary: #f5cb7e;
+    --color-font-link-primary: #b37d19;
 
-    /* LIENS, HOVER & FOCUS */
+    /* LIENS, HOVER, FOCUS... */
     --color-hover-primary: #b68d41;
     --color-hover-secondary: #f0ba57;
     --color-hover-arrows: #a0a0a0;
     --color-input-border: #b7c1cf;
     --color-input-shadow: #929fb1;
+    --color-div-border-primary: #c3cddb;
 
     /* BANDEAU & MENU */
     --color-bg-bandeau-primary: var(--color-bg-dark-secondary);
     --color-bg-bandeau-secondary: var(--color-bg-light-primary);
     --color-bg-bandeau-submenu: var(--color-bg-dark-primary);
     --color-font-bandeau-title-primary: var(--color-font-title-primary);
-    --color-font-bandeau-title-secondary: var(--color-font-title-secondary);
+    --color-font-bandeau-title-secondary: #4e8f60;
     --color-font-menu-primary: var(--color-font-dark);
     --color-font-submenu: #bdc8d4;
     --color-font-submenu-title: #bdc8d4;
